--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         }
     },
     "autoload": {
+        "classmap": [
+            "database"
+          ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
