--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /node_modules
 /public/hot
 /public/storage
-!/public/images/sampul.png
-/public/images/*
+!/public/images/buku/sampul.png
+/public/images/buku/*
 /storage/*.key
 /vendor
 .env
