--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_DATABASE=tokbuk
 DB_USERNAME=
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
