--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/hot
 /public/storage
 /public/images/buku/*
+/public/images/faktur/*
 !/public/images/buku/sampul.png
 /storage/*.key
 /storage/framework/laravel-excel/*
