--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sentry/sentry-laravel": "^2.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
