--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         "barryvdh/laravel-debugbar": "^3.5"
       },
       "require-dev": {
-        "sentry/sentry-laravel": "^2.1",
+        "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "sentry/sentry-laravel": "^2.1"
     },
     "config": {
         "optimize-autoloader": true,
